--- a/src/htdocs/css/leaflet/_index.scss
+++ b/src/htdocs/css/leaflet/_index.scss
@@ -1,4 +1,30 @@
+@use '../mixins' as *;
 @use 'bottomCenter';
 @use 'editable';
 @use 'mousePosition';
 @use 'overrides';
+
+.leaflet-popup-content {
+  dd,
+  dt {
+    line-height: 1.7;
+  }
+  dd {
+    color: $text-color;
+  }
+  dt {
+    @include labels;
+
+    clear: left;
+    display: block;
+    float: left;
+    line-height: 1.75; /* accommodate smaller font-size of labels */
+    margin-right: .5rem;
+    text-align: right;
+    width: 6rem;
+  }
+
+  dl {
+    margin-bottom: 0;
+  }
+}
