make impact buttons more narrrow

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -120,6 +120,10 @@
       font-weight: 300;
       padding: 0 .25rem .3rem .25rem;
     }
+
+    .impact-bubble {
+      min-width: 2.5rem;
+    }
   }
 
   .products {
