align labels to content

--- a/src/htdocs/css/leaflet/_index.scss
+++ b/src/htdocs/css/leaflet/_index.scss
@@ -20,7 +20,7 @@
     clear: left;
     display: block;
     float: left;
-    line-height: 1.625; /* accommodate smaller font-size of labels */
+    line-height: 27px; /* accommodate smaller font-size of labels */
     margin-right: .5rem;
     text-align: right;
     width: 6rem;
