--- a/src/htdocs/css/features/util/_earthquakes.scss
+++ b/src/htdocs/css/features/util/_earthquakes.scss
@@ -205,12 +205,12 @@
       content: 'Earthquake';
     }
 
-    bottom: -2px;
+    bottom: 0;
     margin: 0;
     padding-bottom: 2px;
     padding-top: 2px;
     position: absolute;
-    right: -.5rem;
+    right: -.25rem;
   }
 
   time {
