add options class and move css rules to sidebar

--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -52,6 +52,49 @@
     top: 8rem;
     transition: right $sidebar-toggle-duration ease;
   }
+
+  .options {
+    align-items: center;
+    border: 1px solid $accent-color;
+    border-radius: $button-border-radius;
+    display: inline-flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      border-left: 1px solid $accent-color;
+      color: $accent-color;
+      cursor: pointer;
+      font: bold 13px $font-family-headers;
+      margin: 0;
+      padding: .25rem .5rem;
+      text-align: center;
+      text-transform: uppercase;
+      transition: background .15s ease-in;
+
+      &:hover {
+        background: $accent-color-lightest;
+        transition: background $effect-on-duration ease-out;
+      }
+
+      &:first-child {
+        border: none;
+        border-radius: $button-border-radius 0 0 $button-border-radius;
+      }
+      &:last-child {
+        border-radius: 0 $button-border-radius $button-border-radius 0;
+      }
+
+      &.selected {
+        background: $accent-color;
+        border-radius: 0;
+        color: $bg-color;
+        cursor: auto;
+        transition: background $effect-on-duration ease-out;
+      }
+    }
+  }
 }
 
 body.sidebar {
