tweak transition; set active state

--- a/src/htdocs/css/_significantEqs.scss
+++ b/src/htdocs/css/_significantEqs.scss
@@ -34,7 +34,7 @@ ul#significantEqs { /* list */
     display: flex;
     margin: 0;
     padding: .5rem .25rem;
-    transition: all $effect-off-duration + .15s ease-in;
+    transition: all $effect-off-duration ease-in;
 
     &:hover {
       background: $accent-color-lightest;
@@ -52,6 +52,7 @@ ul#significantEqs { /* list */
       border: none;
     }
 
+    &:active,
     &.selected {
       background: $accent-color;
       color: #fff;
