put forecast in a separate ‘bubble’

--- a/src/htdocs/css/features/_aftershocks.scss
+++ b/src/htdocs/css/features/_aftershocks.scss
@@ -3,6 +3,18 @@
 @use '../variables' as *;
 
 #summaryPane {
+  .forecast {
+    margin-bottom: 1rem;
+
+    h3 {
+      margin-top: 0;
+    }
+  }
+
+  .model {
+    margin-bottom: 0;
+  }
+
   .probabilities {
     display: flex;
     line-height: 1;
