--- a/src/htdocs/css/_searchBar.scss
+++ b/src/htdocs/css/_searchBar.scss
@@ -5,15 +5,8 @@
     margin: 1rem 0 1.5rem;
   }
 
-  div {
-    &.hide {
-      display: none;
-    }
-
-    &.region {
-      height: 300px;
-      margin: 1.25rem 0 0;
-    }
+  div.hide {
+    display: none;
   }
 
   h3 {
@@ -22,6 +15,11 @@
 
   #end ~ .flatpickr-calendar {
     right: 0; /* align end date calendar to right edge */
+  }
+
+  .customRegion {
+    height: 300px;
+    margin: 1.25rem 0 0;
   }
 
   .dates {
