set margins for catalog options

--- a/src/htdocs/css/_settingsBar.scss
+++ b/src/htdocs/css/_settingsBar.scss
@@ -5,6 +5,10 @@
     margin: 1.5rem 0 -.25rem;
   }
 
+  .catalog {
+    margin: 1.25rem 0 .75rem !important;
+  }
+
   .historical + p {
     margin-top: 1.5rem;
   }
