--- a/src/htdocs/css/_selectBar.scss
+++ b/src/htdocs/css/_selectBar.scss
@@ -3,6 +3,12 @@
 #selectBar {
   button {
     margin-bottom: 1.5rem; /* ensure StatusBar doesn't obscure button */
+    padding-bottom: 2px;
+    padding-top: 2px;
+
+    &:after {
+      content: 'Mainshock';
+    }
   }
 
   p + h3 {
