--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -184,7 +184,7 @@
       max-width: 100%;
       width: 400px;
 
-      &.summary {
+      &.tectonic {
         max-width: 100%;
         width: 816px;
 
