--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -188,10 +188,8 @@
         max-width: 100%;
         width: 816px;
 
-        h2 { /* match <h3> styles since <h2> is already set in JSON feed */
-          font-size: 1.5rem;
-          line-height: 1.4;
-          margin-top: 0;
+        h2 {
+          display: none;
         }
 
         p:last-child {
