match id value to param names

--- a/src/htdocs/css/_searchBar.scss
+++ b/src/htdocs/css/_searchBar.scss
@@ -13,7 +13,7 @@
     margin: 1.25rem 0 .75rem;
   }
 
-  #end ~ .flatpickr-calendar {
+  #endtime ~ .flatpickr-calendar {
     right: 0; /* align end date calendar to right edge */
   }
 
