--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -100,6 +100,10 @@ button {
       box-shadow: inset 0 1px 5px rgba(0, 0, 0, .1);
     }
   }
+
+  &.dim {
+    opacity: .5;
+  }
 }
 
 /* Close buttons
