--- a/src/htdocs/css/_significantEqs.scss
+++ b/src/htdocs/css/_significantEqs.scss
@@ -5,7 +5,7 @@
   border-width: 1px 0;
 }
 
-div#significantEqs { /* loader */
+div#significantEqs { // loader
   height: 5rem;
   position: relative;
 
@@ -14,11 +14,11 @@ div#significantEqs { /* loader */
   }
 }
 
-h4#significantEqs { /* no SignificantEqs msg */
+h4#significantEqs { // no Significant Eqs msg
   padding: 1rem 0;
 }
 
-ul#significantEqs { /* list */
+ul#significantEqs { // list
   list-style: none;
   margin: 0;
   padding: 0;
