--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -68,7 +68,7 @@ $pager-red-color: #f00;
 
 :root {
   --padding-header: 7rem;
-  --padding-gutter: 1rem; /* left and right page gutters */
+  --padding-gutter: 1rem; // left and right page gutters
 }
 
 @media only screen
