--- a/src/htdocs/css/_icons.scss
+++ b/src/htdocs/css/_icons.scss
@@ -1,4 +1,4 @@
-/* Icon font created at https://fontello.com on 2021-09-08 */
+// Icon font created at https://fontello.com on 2021-09-08
 
 @font-face {
   font-family: 'icons';
@@ -11,16 +11,17 @@
   font-weight: normal;
   font-style: normal;
 }
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-/*
+
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it.
+   Note, that will break hinting! In other OS-es font will be not as sharp as it could be
+
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'icons';
     src: url('../font/icons.svg?68966375#icons') format('svg');
   }
-}
-*/
+} */
+
 [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "icons";
   font-style: normal;
@@ -32,28 +33,21 @@
   width: 1em;
   margin-right: .2em;
   text-align: center;
-  /* opacity: .8; */
+  // opacity: .8;
 
-  /* For safety - reset parent styles, that can break glyph codes */
+  // For safety - reset parent styles that can break glyph codes
   font-variant: normal;
   text-transform: none;
 
-  /* fix buttons height, for twitter bootstrap */
+  // Fix buttons height, for twitter bootstrap
   line-height: 1em;
 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
-
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
-
-  /* Font smoothing. That was taken from TWBS */
+  // Font smoothing
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+  // 3D effect
+  // text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3);
 }
 
 .icon-check:before { content: '\e800'; }
