--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -13,12 +13,12 @@
   width: $sidebar-width;
   z-index: 1000;
 
-  /* hide scrollbars */
-  -ms-overflow-style: none; /* IE, Edge */
-  scrollbar-width: none; /* Firefox */
+  // Hide scrollbars
+  -ms-overflow-style: none; // IE, Edge
+  scrollbar-width: none; // Firefox
 
   &::-webkit-scrollbar {
-    display: none; /* Chrome, Safari, and Opera */
+    display: none; // Chrome, Safari, and Opera
   }
 
   h2 {
