--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -26,7 +26,7 @@
     width: 100%;
 
     &:first-child {
-      display: block; /* only display one item (first) at a time */
+      display: block; // only display one item (first) at a time
     }
 
     &.error {
@@ -48,7 +48,7 @@
     text-align: center;
   }
 
-  li { /* error details */
+  li { // error details
     color: #fff;
     display: inline;
     font-size: .875rem;
@@ -91,7 +91,7 @@
     right: 15px;
 
     &:after,
-    &:before { /* 'X' */
+    &:before { // 'X'
       background: #fff;
       content: '';
       height: 20px;
@@ -113,7 +113,7 @@
     right: 52px;
 
     &:after,
-    &:before { /* Partial circle w/ arrow */
+    &:before { // partial circle w/ arrow
       content: '';
       display: block;
     }
