--- a/src/htdocs/css/leaflet/_editable.scss
+++ b/src/htdocs/css/leaflet/_editable.scss
@@ -12,7 +12,7 @@
       }
     }
     &:hover {
-      display: flex; /* override Leaflet's display:block */
+      display: flex; // override Leaflet's display:block
     }
   }
 
